--- a/index.html
+++ b/index.html
@@ -949,7 +949,6 @@ function processGestures(lm) {
             target: new THREE.Vector3(0, 0, 0)
         };
     }
-    // 记录被锁定的照片（包含原始位置+原始运动状态）
     if (typeof window.lockedPhoto === 'undefined') window.lockedPhoto = {
         mesh: null,
         originalPos: null,
@@ -957,12 +956,13 @@ function processGestures(lm) {
         isLocked: false
     };
 
-    // 聚焦配置（平缓速度，不头晕）
+    // 聚焦配置（极致平滑+沉浸式距离）
     const FOCUS_CONFIG = {
-        targetDistance: 8,        // 相机到照片的距离
-        focusSpeed: 0.15,         // 平缓速度（0.15，不头晕）
-        lockThreshold: 1.0,       // 锁定阈值（1.0，不用太精准）
-        restoreSpeed: 0.15,
+        targetDistance: 5,        // 缩短到5（相机在粒子群中间，而非远处）
+        focusSpeed: 0.08,         // 超慢速度（0.08，完全不晕）
+        easeFactor: 0.05,         // 缓动因子（让移动更丝滑）
+        lockThreshold: 0.5,       // 宽松锁定阈值
+        restoreSpeed: 0.1,        // 恢复速度也放慢
         offsetAxis: 'z',          
         offsetDirection: -1       
     };
@@ -996,9 +996,9 @@ function processGestures(lm) {
         STATE.mode = 'FOCUS';
         const photos = particleSystem.filter(p => p.type === 'PHOTO' && p.mesh);
         
-        // 刚捏合时：锁定照片位置 + 初始化聚焦
+        // 刚捏合时：锁定照片 + 初始化
         if (isJustPinched) {
-            // 先解锁上一张被锁定的照片（如果有）
+            // 解锁上一张照片
             if (window.lockedPhoto.isLocked && window.lockedPhoto.mesh) {
                 window.lockedPhoto.mesh.position.copy(window.lockedPhoto.originalPos);
                 window.lockedPhoto.mesh.rotation.copy(window.lockedPhoto.originalRotation);
@@ -1007,19 +1007,17 @@ function processGestures(lm) {
             }
 
             if (photos.length > 0) {
-                // 切换照片索引
                 window.photoIndex = (window.photoIndex + 1) % photos.length;
                 const targetPhoto = photos[window.photoIndex].mesh;
                 STATE.focusTarget = targetPhoto;
 
-                // ========== 核心：锁定照片位置 ==========
+                // 锁定照片位置（仅固定，不隐藏其他粒子）
                 window.lockedPhoto = {
                     mesh: targetPhoto,
-                    originalPos: targetPhoto.position.clone(), // 记录原始位置
-                    originalRotation: targetPhoto.rotation.clone(), // 记录原始旋转
+                    originalPos: targetPhoto.position.clone(),
+                    originalRotation: targetPhoto.rotation.clone(),
                     isLocked: true
                 };
-                // 强制照片固定在当前位置（停止所有移动/旋转）
                 targetPhoto.position.copy(window.lockedPhoto.originalPos);
                 targetPhoto.rotation.copy(window.lockedPhoto.originalRotation);
 
@@ -1028,17 +1026,17 @@ function processGestures(lm) {
                 console.log(`===== 切换到第${window.photoIndex}张照片 =====`);
                 console.log(`📸 锁定照片位置：x=${photoPos.x.toFixed(2)}, y=${photoPos.y.toFixed(2)}, z=${photoPos.z.toFixed(2)}`);
                 
-                // 计算相机目标位置
+                // 计算相机目标位置（更靠近粒子群）
                 const cameraTargetPos = photoPos.clone();
                 cameraTargetPos[FOCUS_CONFIG.offsetAxis] += FOCUS_CONFIG.targetDistance * FOCUS_CONFIG.offsetDirection;
-                console.log(`🎥 相机目标位置：x=${cameraTargetPos.x.toFixed(2)}, y=${cameraTargetPos.y.toFixed(2)}, z=${cameraTargetPos.z.toFixed(2)}`);
+                console.log(`🎥 相机目标位置（粒子群中）：x=${cameraTargetPos.x.toFixed(2)}, y=${cameraTargetPos.y.toFixed(2)}, z=${cameraTargetPos.z.toFixed(2)}`);
             } else {
                 STATE.focusTarget = STATE.starMesh;
                 console.log("无照片，聚焦星星");
             }
         }
 
-        // 相机平缓聚焦到固定的照片位置
+        // 超平滑聚焦逻辑（缓动插值）
         if (window.lockedPhoto.isLocked && window.lockedPhoto.originalPos) {
             const targetPos = window.lockedPhoto.originalPos;
             const cameraTargetPos = targetPos.clone();
@@ -1048,38 +1046,41 @@ function processGestures(lm) {
             const currentDistance = camera.position.distanceTo(cameraTargetPos);
             console.log(`📏 当前距离：${currentDistance.toFixed(2)}，锁定阈值：${FOCUS_CONFIG.lockThreshold}`);
 
-            // 平缓移动（0.15速度，不头晕）
+            // 超平滑移动：缓动插值（先慢后快再慢）
             if (currentDistance > FOCUS_CONFIG.lockThreshold) {
-                camera.position.lerp(cameraTargetPos, FOCUS_CONFIG.focusSpeed);
-                console.log(`🚶 相机平缓移动中：x=${camera.position.x.toFixed(2)}, y=${camera.position.y.toFixed(2)}, z=${camera.position.z.toFixed(2)}`);
+                // 缓动公式：让移动速度随距离递减，更丝滑
+                const easeSpeed = FOCUS_CONFIG.focusSpeed + (currentDistance * FOCUS_CONFIG.easeFactor);
+                camera.position.lerp(cameraTargetPos, easeSpeed);
+                console.log(`🚶 超平滑移动中（速度：${easeSpeed.toFixed(3)}）：x=${camera.position.x.toFixed(2)}, y=${camera.position.y.toFixed(2)}, z=${camera.position.z.toFixed(2)}`);
             } else {
-                // 到达目标距离，锁定相机位置
+                // 锁定视角，但不改变粒子位置
                 camera.position.copy(cameraTargetPos);
-                console.log("✅ 聚焦完成，视角固定");
+                console.log("✅ 聚焦完成，置身粒子群中锁定照片");
             }
 
-            // 强制相机朝向照片中心
+            // 强制朝向照片，同时保证粒子在视野中
             camera.lookAt(targetPos);
+            // 可选：调整相机视野，让更多粒子显示（如果视野太窄）
+            // camera.fov = 75; // 增大视野（默认50）
+            // camera.updateProjectionMatrix();
         }
 
-        // 停止场景旋转
+        // 停止场景旋转，但保留粒子渲染
         STATE.spinVel.x = 0;
         STATE.spinVel.y = 0;
     } else {
-        // ========== 松开Pinch：解锁照片 + 恢复视角 ==========
+        // ========== 松开Pinch：平缓恢复 ==========
         STATE.mode = isPalmOpen ? 'SCATTER' : 'TREE';
         STATE.wasPointing = false;
 
-        // 解锁被锁定的照片（恢复移动）
+        // 解锁照片，恢复移动（粒子始终保留）
         if (window.lockedPhoto.isLocked && window.lockedPhoto.mesh) {
-            // 可选：如果照片有自动运动逻辑，这里可以恢复其运动状态
-            // 比如：targetPhoto.userData.isMoving = true;
             window.lockedPhoto.isLocked = false;
-            console.log("🔓 松开Pinch，解锁照片，恢复移动");
+            console.log("🔓 松开Pinch，解锁照片，粒子群保留");
         }
 
-        // 平缓恢复相机初始视角
-        console.log("🔙 恢复初始视角");
+        // 超平缓恢复初始视角
+        console.log("🔙 平缓恢复初始视角");
         camera.position.lerp(window.cameraOriginalState.pos, FOCUS_CONFIG.restoreSpeed);
         camera.lookAt(window.cameraOriginalState.target);
 
