--- a/index.html
+++ b/index.html
@@ -947,6 +947,16 @@ function processGestures(lm) {
         window.photoIndex = 0; // 用window全局变量，避免STATE被意外重置
     }
 
+    // 初始化相机默认位置（如果未定义）
+    if (typeof window.cameraDefaultPosition === 'undefined') {
+        // 保存相机初始位置作为默认位置
+        window.cameraDefaultPosition = {
+            x: STATE.camera.position.x,
+            y: STATE.camera.position.y,
+            z: STATE.camera.position.z
+        };
+    }
+
     // 获取关键点坐标 (0:手腕, 4:拇指尖, 8:食指尖, 9:掌心, 12:中指尖, 16:无名指尖, 20:小指尖)
     const wrist = lm[0];
     const thumbTip = lm[4];
@@ -979,7 +989,7 @@ function processGestures(lm) {
 
     // ========== 4. 核心状态机逻辑 ==========
     if (isPinching) {
-        // FOCUS模式：Pinch捏合 → 切换照片/聚焦星星
+        // FOCUS模式：Pinch捏合 → 相机移动到照片位置/聚焦星星
         STATE.mode = 'FOCUS';
         // 过滤有效照片（确保mesh存在）
         const photos = particleSystem.filter(p => p.type === 'PHOTO' && p.mesh);
@@ -987,14 +997,32 @@ function processGestures(lm) {
         console.log("当前全局索引：", window.photoIndex);
 
         // 只在「刚捏合」的瞬间切换目标（防抖动）
-        if (isJustPinched && photos.length > 0) {
-            // 循环更新索引
-            window.photoIndex = (window.photoIndex + 1) % photos.length;
-            STATE.focusTarget = photos[window.photoIndex].mesh;
-            console.log("Pinch切换到：第", window.photoIndex, "张照片");
-        } else if (photos.length === 0) {
-            STATE.focusTarget = STATE.starMesh;
-            console.log("无照片，聚焦星星");
+        if (isJustPinched) {
+            if (photos.length > 0) {
+                // 循环更新索引
+                window.photoIndex = (window.photoIndex + 1) % photos.length;
+                STATE.focusTarget = photos[window.photoIndex].mesh;
+                console.log("Pinch切换到：第", window.photoIndex, "张照片");
+            } else {
+                STATE.focusTarget = STATE.starMesh;
+                console.log("无照片，聚焦星星");
+            }
+        }
+
+        // ========== 核心修改：相机移动到目标位置 ==========
+        if (STATE.focusTarget) {
+            // 目标位置：在照片/星星前方一点的位置，保证能看清
+            const targetPosition = new THREE.Vector3().copy(STATE.focusTarget.position);
+            // 相机朝向目标，位置在目标前方（z轴正方向）
+            targetPosition.z += 1.5; // 可调整这个值控制相机与照片的距离
+            targetPosition.y += 0.2; // 轻微抬高相机，视角更自然
+            
+            // 平滑移动相机
+            const smoothFactor = 0.1; // 平滑系数，越小越慢
+            STATE.camera.position.lerp(targetPosition, smoothFactor);
+            
+            // 让相机始终看向目标
+            STATE.camera.lookAt(STATE.focusTarget.position);
         }
 
         // 聚焦时停止手势旋转
@@ -1002,8 +1030,21 @@ function processGestures(lm) {
         STATE.spinVel.x *= 0.9;
         STATE.spinVel.y *= 0.9;
     } else {
-        // TREE/SCATTER模式：非Pinch状态 → 手掌控制旋转
+        // TREE/SCATTER模式：非Pinch状态 → 手掌控制旋转，相机回到默认位置
         STATE.wasPointing = false; // 兼容原有指点手势的状态重置
+
+        // 相机回到默认位置
+        if (window.cameraDefaultPosition) {
+            const defaultPos = new THREE.Vector3(
+                window.cameraDefaultPosition.x,
+                window.cameraDefaultPosition.y,
+                window.cameraDefaultPosition.z
+            );
+            const smoothFactor = 0.05; // 相机返回默认位置的平滑系数
+            STATE.camera.position.lerp(defaultPos, smoothFactor);
+            // 恢复相机默认朝向（可根据你的场景调整）
+            STATE.camera.lookAt(0, 0, 0);
+        }
 
         if (isPalmOpen) {
             // SCATTER模式：手掌张开 → 手动控制旋转
