--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ async function loadStoryPhotos() {
             wasPointing: false, // 上一帧是否在指点
             palmCenter: { x: 0.5, y: 0.5 }, // 手掌中心基准点
             hasPalmCenter: false,
-            starMesh: null // 树顶星星的引用
+            starMesh: null, // 树顶星星的引用
 			camera: {
         targetPos: new THREE.Vector3(), // 相机目标位置
         currentPos: new THREE.Vector3(), // 相机当前位置
